# fart

./: .gitignore  AUTHORS  Makefile.am  README  TODO  configure.ac
src/: fart.cc  fart.h  main.cc  player.cc  player.h  timer.cc  timer.h  utils.cc  utils.h  velocity.cc  velocity.h
